kubernetes/apps/media/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - sonarr.local.elmurphy.com
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
